<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".activities.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/muli_bold"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="35sp" />

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            ads:cardBackgroundColor="@color/white"
            ads:cardCornerRadius="25dp"
            ads:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/top_curved"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/exit_text"
                    android:textAlignment="center"
                    android:textColor="@color/teal_200"
                    android:textSize="20sp" />

                <com.google.android.gms.ads.AdView
                    android:id="@+id/cardAds"
                    android:layout_width="300dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    ads:adSize="MEDIUM_RECTANGLE"
                    ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/exit_yes"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yes"
                        android:textColor="@color/red"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/exit_no"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no"
                        android:textColor="@color/green"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:columnCount="1"
            android:rowCount="1"
            tools:ignore="NotSibling,UselessParent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="25dp"
                app:cardElevation="8dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/device_emulator"
                        android:layout_width="60dp"
                        android:layout_height="70dp"
                        android:src="@drawable/ic_baseline_phone_android_24"
                        android:contentDescription="@string/placeholder_text" />

                    <TextView
                        android:id="@+id/device_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="60dp"
                        android:text="@string/placeholder_text"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/connection_check"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_below="@+id/device_name"
                        android:layout_marginStart="55dp"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/ic_baseline_cancel_24"
                        android:contentDescription="@string/placeholder_text" />

                    <TextView
                        android:id="@+id/device_connection_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/device_name"
                        android:layout_marginStart="77dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/disconnected"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:padding="15dp">

                    <ImageView
                        android:id="@+id/console_switcher"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_baseline_developer_board_24"
                        android:contentDescription="@string/placeholder_text" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:columnCount="2"
            android:rowCount="1"
            tools:ignore="NotSibling,UselessParent">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/check_status_connection"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_baseline_sensors_off_24"
                        android:contentDescription="@string/placeholder_text" />

                    <Switch
                        android:id="@+id/status_change_switcher"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:thumb="@drawable/thumb"
                        app:track="@drawable/track"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />

<!--                    <Switch-->
<!--                        android:id="@+id/status_change_switcher"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:checked="false"-->
<!--                        tools:ignore="UseSwitchCompatOrMaterialXml" />-->

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/exit_button"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_baseline_exit_to_app_24"
                        android:contentDescription="@string/placeholder_text" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/exit"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>

    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />

    <RelativeLayout
        android:id="@+id/console_switcher_show_hide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="6dp"
        android:background="@drawable/top_curved">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/console_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:paddingTop="10dp"
                android:paddingRight="25dp"
                android:text="@string/placeholder_text"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </ScrollView>

    </RelativeLayout>

</LinearLayout>